--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://srirag-vuppala.github.io/mapm_frontend",
   "name": "mapm_frontend",
   "version": "0.1.0",
   "private": true,
@@ -26,6 +27,8 @@
     "yup": "^0.32.9"
   },
   "scripts": {
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -b main -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -45,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
