add github pages config

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://srirag-vuppala.github.io/mapm_frontend",
+  "homepage": "https://srirag-vuppala.github.io/mapm_front/",
   "name": "mapm_frontend",
   "version": "0.1.0",
   "private": true,
@@ -28,7 +28,7 @@
   },
   "scripts": {
     "predeploy": "yarn run build",
-    "deploy": "gh-pages -b main -d build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
